@@ -24,7 +24,7 @@ repositories {
 }
 
 architectury {
-    common(rootProject.enabled_platforms.split(","))
+    common("fabric", "neoforge")
 }
 
 loom {
@@ -37,6 +37,8 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 
     modImplementation 'maven.modrinth:jade:15.1.5+fabric'
+
+    modImplementation "dev.architectury:architectury:${project.architectury_api_version}"
 
     // lombok that makes the life easier
     // https://projectlombok.org/setup/gradle
@@ -63,4 +65,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    // Since JDK 21
+    // ref: https://stackoverflow.com/questions/77951485/getting-a-java-agent-has-been-loaded-warning-in-intellij-after-upgrading-jdk-17
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
